# samdul02food

./: .firebaserc  Dockerfile  firebase.json  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
public/: index.html  index_backup.html
src/samdul00food/: main.py
